# spinner

./: .eslintrc.json  .gitignore  README.md  package.json
actors/: .gitignore  Cargo.toml  Makefile
actors/scripts/: canister_status.sh  create_canister.sh  functions  install_canister.sh  install_ledger_icp  install_ledger_nns  install_pool_icp  install_text_logger
actors/src/: ledger.rs  lib.rs  poseidon.rs  verifier.rs
actors/src/verifier/: constants.rs  test_input_constants.rs  test_proof_constants.rs
circuits/: .gitignore  Makefile  README.md  circuit.circom  compress.js  input.json  merkleTree.circom  transaction.circom
data/: Makefile  checksum.txt
